--- a/transcriptions/16v.md
+++ b/transcriptions/16v.md
@@ -1,2 +1,44 @@
-And with þat sight hir beaute hurt him so
-That if þ
+---
+title: "Transcription of folio 16v"
+date: May 2018
+---
+
+- [X] Transcribed
+- [ ] Double-checked
+
+And with þat sight hir beaute hurt him so  
+That if þat Palamon was wounded sore  
+Arcite is hurt as muche as he or more  
+And with a syke he seyde pitously  
+The freissche beaute sleþ me sodeinly  
+Of hire þat rometh in þe yonder place  
+And but I haue hir mercy and hir grace  
+That I may seen hir atte leste wey  
+I nam but ded þer nys no more to sey  
+This Palamon whan he þis wordes herde  
+Dispitously he loked and answerde  
+Wheþ&#777; seistow þis in ernest or in pleye  
+Nay qd Arcite in ernest by my feye  
+God helpe me so me lust ful yuel playe  
+This Palamon gan knet his browes twaye  
+It were to þe quod he no gret honour  
+ﬀor to be fals ne for to be traytour  
+To me þat am þi cosyn and þi broþer  
+y sworn ful deepe and ech of vs til oþer  
+That neuer for to deyen in þe payn  
+Til þat þe deþ departe schal us twayn  
+Neither in loue for to hinder oþer  
+Ne in non oþer cas my lieue broþer  
+But þat þou scholdest trewly forþer more  
+In euery caas and I schal forþre þe more  
+This was þin oþ and myn also certeine  
+I wot right wel þou darst it not wiþ seyne  
+Thus art þou of my counseil out of doute  
+And now þou woldest falsly ben aboute  
+To loue my lady whom I loue and serue  
+And euer schal til þat myn herte sterue  
+Now certes fals Arcite þou schalt not so  
+I loued hir ferst and tolde þe my wo  
+As to my counseil and my broþer sworn  
+To forthre me as I haue told biforn  
+ﬀor which þou art y bounden as a knight  
