--- a/transcriptions/17r.md
+++ b/transcriptions/17r.md
@@ -3,7 +3,7 @@ title: "Transcription of folio 17r"
 date: May 2018
 ---
 
-- [ ] Transcribed
+- [X] Transcribed
 - [ ] Double checked
 
 To helpe me if it lay in thy might  
@@ -31,5 +31,14 @@ Al be sche mayde or wydow or elles wif
 And eek it is not likly al þi lif  
 To stonden in hir grace namore schal I  
 ﬀor wel þou wost þi selue verreily  
-That þou and I ben dampned to prisoōn̄
-Ramsōn̄
+That þou and I ben dampned to prisoōn̄  
+Ꝑpetuelly vs gaigneth no Ramsōn̄  
+We stryuen now as houndes for þe bon  
+They fought alday and ȝet here part was non  
+Ther com a kyte whil þat þei were so wroþe  
+That bar a way þe bon bytwixe hem boþe  
+Ak þerfore atte kinges court my broþer  
+Ech man for him self þer is non oþer  
+loue if þou list for I loue and ay schal  
+A soothly leue broþer þis is al  
+her in þis prisōn̄ mote we endure  
