--- a/transcriptions/16r.md
+++ b/transcriptions/16r.md
@@ -1,8 +1,16 @@
+---
+title: "Transcription of folio 17r"
+date: May 2018
+---
+
+- [X] Transcribed
+- [ ] Double checked
+
 And þer with al he bleynt and cr*y*ed a
 As þough he stongen were unto þe herte
 And with þat cr*y*e Arcite anon up sterte
 And seide Cosyn myn what eyleþ þe
 That art so pale and dedly on to se
 Why crydestow who haþ þe on offence
-*ff* or goddes love tak al in pacience
+ﬀor goddes love tak al in pacience
 Oure *p* soun   
