--- a/transcriptions/17r.md
+++ b/transcriptions/17r.md
@@ -1,9 +1,9 @@
 ---
-title: "Transcription of folio 17r"
-date: May 2018
+title: "Transcription of folio 16r"
+date: June 2018
 ---
 
-- [X] Transcribed
+- [ ] Transcribed
 - [ ] Double checked
 
 To helpe me if it lay in thy might  
