--- a/transcriptions/16r.md
+++ b/transcriptions/16r.md
@@ -6,11 +6,31 @@ date: May 2018
 - [X] Transcribed
 - [ ] Double checked
 
-And þer with al he bleynt and cr*y*ed a
+And þer with al he bleynt and crẏed a
 As þough he stongen were unto þe herte
-And with þat cr*y*e Arcite anon up sterte
-And seide Cosyn myn what eyleþ þe
+And with þat crẏe Arcite anon up sterte
+And seide Cosyn myn what eẏleþ þe
 That art so pale and dedly on to se
-Why crydestow who haþ þe on offence
+Whẏ crẏdestow who haþ þe don offence
 ﬀor goddes love tak al in pacience
-Oure *p* soun   
+Oure p̉soun for it maẏ non oþer be
+ﬀortune haþ ẏiue us þis aduersite
+Som wicke aspect or disposiciōn̄
+Of Saturne bẏ som constellaciōn̄
+Haþ ȝiuen vs þis al þough we had it sworn
+So stood þe heuen whan 
+
+
+So stood pe heuen whan pat1 we ware born
+We mote endure it1 pis is schort1 and playn This Palamon answerd and seide again
+Cosyn for sope of1 pis opyniofi
+Jjou hast1 a vain Imaginacion
+This prisofi causede me nought to crie
+But1 I was hurt1 right1 now porugh out1 myn yho In to myn hert1 pat1 wol my hane be
+
+ The fayrnesse of1 pat1 lady pat1 I
+see 3onde in the gardyn rome to and fro Is cause of1 al my crying1 and my wo
+not1 wher sche be wommIan or
+But1 Venus is it soply as gesse
+And per with al on knees a doun he fille And seyde Venus if1 it1 be py wille
+yow in pis gardeyn pus to transfigure
