--- a/transcriptions/16r.md
+++ b/transcriptions/16r.md
@@ -1,6 +1,6 @@
 ---
-title: "Transcription of folio 17r"
-date: May 2018
+title: "Transcription of folio 16r"
+date: June 2018
 ---
 
 - [X] Transcribed
@@ -18,19 +18,27 @@ Oure p̉soun for it maẏ non oþer be
 Som wicke aspect or disposiciōn̄
 Of Saturne bẏ som constellaciōn̄
 Haþ ȝiuen vs þis al þough we had it sworn
-So stood þe heuen whan 
-
-
-So stood pe heuen whan pat1 we ware born
-We mote endure it1 pis is schort1 and playn This Palamon answerd and seide again
-Cosyn for sope of1 pis opyniofi
-Jjou hast1 a vain Imaginacion
-This prisofi causede me nought to crie
-But1 I was hurt1 right1 now porugh out1 myn yho In to myn hert1 pat1 wol my hane be
-
- The fayrnesse of1 pat1 lady pat1 I
-see 3onde in the gardyn rome to and fro Is cause of1 al my crying1 and my wo
-not1 wher sche be wommIan or
-But1 Venus is it soply as gesse
-And per with al on knees a doun he fille And seyde Venus if1 it1 be py wille
-yow in pis gardeyn pus to transfigure
+So stood þe heuen whan þat we ware born
+We mote endure it þis is schort and plaẏn
+This Palamon answerd and seide again
+Cosyn for soþe of þis opynion
+Þou hast a vain imaginacion
+This p̉son̄ causede me nought to crie  
+But I was hurt right now þorugħ out myn ẏhe  
+In to myn hert þat wol mẏ bane be
+The faẏrnesse of þat ladẏ þat I see
+Ȝonde in the gardẏn rome to and fro
+Is cause of al mẏ crẏing and mẏ wo
+I not wher sche be wōman or goddesse
+But Venus is it sothlẏ as I gesse
+And þer with al on knees a doun he fille  
+And seyde Venus if it be þẏ wille
+ẏow in þis gardeyn þus to tñsfigure
+Bẏfore me sorwful wrecched creature
+Out of þis prison̄ help þat we mowe scape
+And if so be mẏ destenẏe be schape
+Bẏ eterne world to deẏen in p̉son̄
+Of oure lynage haue som compassion̄
+That is so lowe ẏ brougħt bẏ tyrannie
+And with þat word Arcite gan aspẏe
+Wher as þis ladẏ romed to and fro
