--- a/transcriptions/18v.md
+++ b/transcriptions/18v.md
@@ -4,3 +4,15 @@ date: June 2018
 
 - [ ] Transcribed
 - [ ] Double checked
+
+That in his hous is of his meẏne slain  
+Infinite harmes ben in þis matiere  
+We wot not what þing þat we preẏen heere  
+We faren as he þat dronken is as Mous  
+A dronke man wot wel he haþ an hous  
+But he not which þe righte weie is þider
+And to a dronke man þe weye is slider
+And certes in þis world so faren we
+We seeken fast after felicite
+But we gon wrong ful ofte trewely
+Thus may we seẏn 
