--- a/transcriptions/18v.md
+++ b/transcriptions/18v.md
@@ -15,4 +15,4 @@ And to a dronke man þe weye is slider
 And certes in þis world so faren we
 We seeken fast after felicite
 But we gon wrong ful ofte trewely
-Thus may we seẏn 
+Thus may we seẏn aỻ an
