--- a/transcriptions/18v.md
+++ b/transcriptions/18v.md
@@ -10,9 +10,11 @@ Infinite harmes ben in þis matiere
 We wot not what þing þat we preẏen heere  
 We faren as he þat dronken is as Mous  
 A dronke man wot wel he haþ an hous  
-But he not which þe righte weie is þider
-And to a dronke man þe weye is slider
-And certes in þis world so faren we
-We seeken fast after felicite
-But we gon wrong ful ofte trewely
-Thus may we seẏn aỻ an
+But he not which þe righte weie is þider  
+And to a dronke man þe weye is slider  
+And certes in þis world so faren we  
+We seeken fast after felicite  
+But we gon wrong ful ofte trewely  
+Thus may we seẏn aỻ and namlich I  
+That wende and hadde a gret opẏnion̄  
+That if I might skapen fro p̉son̄  
