--- a/transcriptions/18v.md
+++ b/transcriptions/18v.md
@@ -18,3 +18,4 @@ But we gon wrong ful ofte trewely
 Thus may we seẏn aỻ and namlich I  
 That wende and hadde a gret opẏnion̄  
 That if I might skapen fro p̉son̄  
+Than 
