--- a/transcriptions/18v.md
+++ b/transcriptions/18v.md
@@ -18,4 +18,20 @@ But we gon wrong ful ofte trewely
 Thus may we seẏn aỻ and namlich I  
 That wende and hadde a gret opẏnion̄  
 That if I might skapen fro p̉son̄  
-Than 
+Than hadde I ben in joẏe and ꝑfyt hele  
+Ther now I am exiled fro mẏ wele  
+Syn þat I maẏ not seen ȝou Emelye  
+I am but ded þer nẏs no remedẏe  
+vpon þat oþer syde Palamon  
+Whan þat he wiste þat Arcite was gon   
+Swich sorwe he makeþ þat þe grete tour  
+Resouneþ of his yollyng and clamour   
+The pure fettres of his schẏnes grete  
+Were of his bittre salte teeres wete
+Allas qd he arcita cosy myn
+Of aỻ our strif god wot þe fruẏt is þin
+Thou walkest now in Thebes at þi large
+And of mẏ woo þou ẏernest litel charge
+Thou maist syn þou hast wisdom and manhede
+Assemble aỻ þe folk of oure kinrede
+And make a werre so scharp on þis Cite
