--- a/transcriptions/18v.md
+++ b/transcriptions/18v.md
@@ -1,8 +1,9 @@
+---
 title: "Transcription of folio 18v"
 date: June 2018
 ---
 
-- [ ] Transcribed
+- [x] Transcribed
 - [ ] Double checked
 
 That in his hous is of his meẏne slain  
@@ -26,12 +27,18 @@ vpon þat oþer syde Palamon
 Whan þat he wiste þat Arcite was gon   
 Swich sorwe he makeþ þat þe grete tour  
 Resouneþ of his yollyng and clamour   
-The pure fettres of his schẏnes grete  
-Were of his bittre salte teeres wete
-Allas qd he arcita cosy myn
-Of aỻ our strif god wot þe fruẏt is þin
-Thou walkest now in Thebes at þi large
-And of mẏ woo þou ẏernest litel charge
-Thou maist syn þou hast wisdom and manhede
-Assemble aỻ þe folk of oure kinrede
-And make a werre so scharp on þis Cite
+The pure fettres of his schẏnes grete   
+Were of his bittre salte teeres wete  
+Allas qd he arcita cosy myn  
+Of aỻ our strif god wot þe fruẏt is þin  
+Thou walkest now in Thebes at þi large  
+And of mẏ woo þou ẏernest litel charge  
+Thou maist syn þou hast wisdom and manhede  
+Assemble aỻ þe folk of oure kinrede  
+And make a werre so scharp on þis Cite  
+That bẏ som auenture or som tretee  
+Thou maist haue hir to ladẏ and to wif  
+ﬀor whom þat I most needes leese mẏ lif  
+ﬀor as bẏ weie of possibilite  
+Sitthe þou art at þi large of prison̄ fre  
+And art a lord gret is þin auantage  
