--- a/transcriptions/19r.md
+++ b/transcriptions/19r.md
@@ -3,6 +3,9 @@ title: "Transcription of folio 19r"
 date: June 2018
 ---
 
+- Transcribed [X]
+- Double checked [ ]
+
 More þan is mẏn þat sterue her in a kage  
 ﬀor I mot weepe and waẏle whil þat I lyue  
 With aỻ þe woo þat prison̄ may me ȝiue  
@@ -29,7 +32,7 @@ That man is bounden to his obẜuaūce
 ﬀor goddes sake to letten of his wille  
 Ther as a beeste may aỻ his lust fulfiỻ  
 And whan a beeste is ded he haþ no peyne  
-But after his deth þe man mot weepe [__!__] pleyne  
+But after his deth þe man mot weepe ⁊ pleyne  
 Though in þis world he haue care and wo  
 Wiþouten doute it maẏ stonden so  
 The answere of þis lete I to diuines  
