--- a/transcriptions/19r.md
+++ b/transcriptions/19r.md
@@ -3,8 +3,8 @@ title: "Transcription of folio 19r"
 date: June 2018
 ---
 
-- Transcribed [X]
-- Double checked [ ]
+- [X] Transcribed
+- [ ] Double checked
 
 More þan is mẏn þat sterue her in a kage  
 ﬀor I mot weepe and waẏle whil þat I lyue  
