--- a/transcriptions/20v.md
+++ b/transcriptions/20v.md
@@ -3,8 +3,8 @@ title: "Transcription of folio 20v"
 date: June 2018
 ---
 
-- Transcribed [X]
-- Double checked [ ]
+- [X] Transcribed
+- [ ] Double checked
 
 And right anon it ran him in his mynde  
 Than siþen his face was so disfigured  
