--- a/transcriptions/20r.md
+++ b/transcriptions/20r.md
@@ -3,8 +3,8 @@ title: "Transcription of folio 20r"
 date: June 2018
 ---
 
-- Transcribed [X]
-- Double checked [ ]
+- [X] Transcribed
+- [ ] Double checked
 
 And waẏlyng al þe night makẏng his mone  
 And if he herde song or instrument  
