--- a/transcriptions/21r.md
+++ b/transcriptions/21r.md
@@ -3,7 +3,7 @@ title: "Transcription of folio 21r"
 date: June 2018
 ---
 
-- [ ] Transcribed
+- [X] Transcribed
 - [ ] Double checked
 
 Boþe of his deedes and of his goode tonge  
