--- a/transcriptions/21v.md
+++ b/transcriptions/21v.md
@@ -1,5 +1,6 @@
 title: "Transcription of folio 21v"
 date: June 2018
+author: Jenna Schoen
 ---
 
 - [ ] Transcribed
@@ -12,4 +13,12 @@ That needes cost he most himseluen hyde
 And til a groue faste þer bisyde  
 With dredful foot þan stalkeþ Palamon  
 ﬀor schortly þis was his opinion  
-That in þat groue 
+That in þat groue he wolde him hide aldaẏ  
+And in þe night þan woled he take his way  
+To Thebes ward his frendes for to praẏ  
+And schortly ouþer he wolde leese his lif  
+Or wynnen Emely to his louely wif  
+This is þeffecte and his entente playn  
+¶ Now wol I torne vnto arcite agayn  
+That litel wiste how neih þat was his care  
+Til þat fortune hadde kaught him in his snare   
