--- a/transcriptions/21v.md
+++ b/transcriptions/21v.md
@@ -3,7 +3,7 @@ date: June 2018
 author: Jenna Schoen
 ---
 
-- [ ] Transcribed
+- [X] Transcribed
 - [ ] Double checked
 
 The gailler sleep he might not awake  
@@ -22,3 +22,22 @@ This is þeffecte and his entente playn
 ¶ Now wol I torne vnto arcite agayn  
 That litel wiste how neih þat was his care  
 Til þat fortune hadde kaught him in his snare   
+The besy larke messanger of daẏ  
+Salueth in hir song þe morwe graẏ  
+And fyrẏ phebus riseþ vp so bright  
+That al þe orient laugheth of þe light  
+And with his streemes drieth in þe greues  
+The seluir dropes hangẏng in þe leeues  
+And Arcita in þe court roial  
+Wiþ Theseus his squier principal  
+Is rẏsen and lokeþ on þe merẏ daẏ  
+Out for to doon his obẜuance to maẏ  
+Remembrẏng on þe poynt of his desir  
+He on his courser stertyng as þe fir  
+Is ryden in to þe feeldes him to pleẏe  
+Out of þe court were it a mẏle or tweẏe  
+And to þe groue of which þat I ȝou tolde  
+Bẏ auenture his weẏe he gan to holde  
+To maken him a garland of þe greues  
+Were it of woodebẏnde or hawethorne leeues  
+And loude he song aȝein þe sonne scheene  
