--- a/transcriptions/22r.md
+++ b/transcriptions/22r.md
@@ -4,7 +4,7 @@ date: June 2018
 author: "G. E. Saretto"
 ---
 
-- [ ] Transcribed
+- [x] Transcribed
 - [ ] Double checked
 
 Maẏ with aỻ þi floures whit and grene  
@@ -13,4 +13,33 @@ I hope þat I som grene gete maẏ
 And from his courser with a lustẏ herte  
 In to þe groue ful hastily he sterte  
 And in a path he rometh vp and doun  
-Ther as bẏ auentur [__!__]
+Ther as bẏ auentur̉ of þis Palamon  
+Was in a busshe þat no man migħt him see  
+ﬀor sore aferd if his deth was he  
+No þing ne knewe he þat it was arcite  
+God wot he wolde haue trowed it ful lite  
+But soþ is seide go siþþen manẏ ȝeeres  
+That feeld haþ ẏhen and þe woode haþ ceres  
+It is ful fair a man to bere him euene  
+ﬀor aldaẏ meeteþ men at vnsett steuene  
+ﬀul litel woot arcite of his felawe  
+That was so neigh to herken of his sawe  
+ﬀor in þe busshe he sitteþ now ful stille  
+Whan þat arcite hadde Romed al his fille  
+And songen al þe Roundel lustily  
+In to a studie he fel sodeinly  
+As doon þese louers in here queẏnte geeres  
+Now in þe croppe and now doun in þe breeres  
+Now vp now doun as boket in a welle  
+Right as þe fridaẏ soþlẏ for to telle  
+Now it schineþ and now it reyneþ faste  
+Right so gan gerẏ venus ouer caste  
+The hertes of hir̉ folk right as hire daẏ  
+Is geerful right so chaungeþ sche arraẏ  
+Seelde is þe frẏdaẏ al þe wike ẏ like  
+¶ Whan þat arcite hadde songe he gan to syke  
+And sette him doun wiþouten enẏ more  
+Allas quod he þat daẏ þat I was bore  
+How longe Iuno þurgh þi cruelte  
+Wiltow werrein Thebes þe Cite  
+Allas ẏ brought is to confusion̄  
