--- a/transcriptions/23v.md
+++ b/transcriptions/23v.md
@@ -31,4 +31,12 @@ Right as þe hunters in þe Reigne of trace
 That stondeþ atte gappe with a spere  
 Whan hunted is þe leoun or þe bere  
 And heereþ him come russhing in þe greeues  
-And bereþ ß
+And bereþ boþe bowes and þe leeues  
+And þinkeþ here comeþ mẏ mortel enemẏ  
+Wiþoute faile he moot be deed or I  
+ﬀor eiþer I mot sleen him atte gappe  
+Or he mot slee me if þat me mys happe  
+So ferden þei in chaungyng of here hewe  
+As fer as euerich of hem oþer knewe  
+As freendlẏ as he were his owne broþer  
+And after þat wiþ scharpe speres stronge  
