--- a/transcriptions/23v.md
+++ b/transcriptions/23v.md
@@ -4,7 +4,7 @@ date: June 2018
 author: Jenna Schoen
 ---
 
-- [ ] Transcribed
+- [X] Transcribed
 - [ ] Double checked
 
 And sle me in þis woode þer I am Inne    
@@ -37,6 +37,9 @@ Wiþoute faile he moot be deed or I
 ﬀor eiþer I mot sleen him atte gappe  
 Or he mot slee me if þat me mys happe  
 So ferden þei in chaungyng of here hewe  
-As fer as euerich of hem oþer knewe  
+As fer as euerich of hem oþer knewe
+Ther nas no good day ne no saluẏnge  
+But streit wiþouten word or rehersynge  
+Euerich of hem hilp for to arme oþer  
 As freendlẏ as he were his owne broþer  
 And after þat wiþ scharpe speres stronge  
