--- a/transcriptions/24v.md
+++ b/transcriptions/24v.md
@@ -3,7 +3,7 @@ title: "Transcription of folio 24v"
 date: June 2018
 author: Jenna Schoen
 ---
-- [ ] Transcribed
+- [X] Transcribed
 - [ ] Double checked
 
 Duk Theseus þe streighte weẏ haþ holde  
@@ -21,4 +21,23 @@ So hidouslẏ þat with þe leste strook
 It semeþ þat it wolde felle an ook  
 But what þei were noþing he ne woot  
 This duk his courser with his spores smot  
-And at a stert he was betwixe 
+And at a stert he was betwixe hem tuo  
+And pulled out a swerd and cried ho  
+No more vp peẏne of lesyng of ȝour̉ hed  
+Bẏ mightẏ mars he schal anon be ded  
+That smẏteþ enẏ strok þat I maẏ seen  
+But telleþ me what mẏster men ȝe ben  
+That ben so hardẏ for to fighten heere  
+Wiþoute Iuge or oþer officere  
+As it were in a liteỻ liste really  
+¶ This Palamon answerde hastily  
+And seide sire what needeþ wordes mo  
+We haue þe deþ deserued boþe tuo  
+Tuo wofil wrecches be we tuo caẏtẏues  
+That ben encombred of oure owne lẏues  
+And as þou art a rightful lord and Iuge  
+Ne ȝive vs neyþer mercẏ ne refuge  
+But slee me first for seinte charite  
+Or slee him for þough þou knowest it lite  
+This is þi mortel fo þis is arcite  
+That fro þi lond is banẏssched on his heede  
