--- a/transcriptions/25r.md
+++ b/transcriptions/25r.md
@@ -4,7 +4,7 @@ date: June 2018
 author: G. E. Saretto
 ---
 
-- [ ] Transcribed
+- [x] Transcribed
 - [ ] Double checked
 
 ﬀor which he haþ deserued to be ded  
@@ -21,3 +21,25 @@ I am þi mortel foo ⁊ am I
 That loueþ so hote Emelya þe brighe  
 That I wol dẏe p̔sent in hir sighte  
 Wher fore I axe deþ and my Iuwise  
+But sle mẏ felawe in þe same wise  
+ﬀor boþe haue we deserued to be slaẏn  
+¶ This worþi duk answerde anon agayn  
+And seide þis is a schort conclusioun  
+ẏour owne mouþ be ȝoure confession̄  
+Haþ dampned ȝou and I wol it recorde  
+It needeþ nought to pẏne ȝou with þe corde  
+ye schal be ded bẏ mightẏ mars þe reede  
+The queen anon for verreẏ wōmanhede  
+Com for to wepe and so dide Emelye  
+And aỻ þe ladies of þe compaignẏe  
+Gret pite was it as it þougħt hem aỻ
+That euer such a chaunce schulde falle  
+ﬀor gentil men þei were of gret estat  
+And noþing but for loue was þis debat  
+And saugħ hire bloodẏ woundes wide and sore  
+And aỻ crẏeden boþe lasse and more  
+Haue mercẏ lord vpon vs wōmen aỻ  
+And on here bare knees doun þei faỻ  
+And wolde haue kist his feet þer as he stood  
+Til atte laste aslaked was his mood  
+ﬀor pite renneþ sone in gentil herte  
