--- a/transcriptions/25v.md
+++ b/transcriptions/25v.md
@@ -3,5 +3,42 @@ title: "Transcription of folio 25v"
 date: June 2018
 author: Jenna Schoen
 ---
-- [ ] Transcribed
+- [X] Transcribed
 - [ ] Double checked
+
+And þough he ferst for Ire quook and sterte  
+he haþ considered schortly in a clause  
+The trespas of hem bothe and eek þe cause  
+And al þough þat his Ire hire gilt accused  
+ȝit in his reson̄ he hem boþe excused
+As þus he þoughte wel þat eủy man  
+Wil helpe himself in loue if þat he can  
+And eek deliuere himself out of p̉son̄  
+And eek his herte hadde compassion̄  
+Of wommē for þeẏ wepen euer in oon  
+And in his gentil herte he þought anon  
+And softe vnto himself he seide fẏ  
+vpon a lord þat wol haue no mercẏ  
+But be a leon̄ boþe in word and dede  
+To hem þat ben in repentance and drede  
+As wel as to a proud dispitous man  
+That wol maintene þat he first bigan  
+That lord haþ litel of discrecion̄  
+That in such cas can no diuision̄  
+But weẏeth pride and humblesse after oon  
+And schortlẏ whan his Ire is þus goon  
+he gan to loken vp with eẏghen ligħt  
+And spak þis same wordes al on higħt  
+¶ The god of loue a benedicite  
+How mightẏ and how gret a lord is he  
+Aȝeins his might þer gaẏneþ non obstacles  
+He maẏ be cleped a god of his miracles  
+ﬀor he can maken at his owne gise  
+Of euerich herte as þat him list deuise  
+lo her þis arcite and þis Palamon  
+That quẏtly were out of mẏ p̉son  
+And might haue lyued in Thebes rially  
+And witen I am here mortel enemy  
+And þat here deþ lith in mẏ might also  
+And ȝit haþ loue maugre here ẏghen tuo  
+Brought hem hider boþe for to deẏe    
