--- a/transcriptions/26v.md
+++ b/transcriptions/26v.md
@@ -5,3 +5,24 @@ author: Jenna Schoen
 ---
 - [ ] Transcribed
 - [ ] Double checked
+
+ﬀor whom ȝe haue þis strif and Ialousie  
+Ȝe wite ȝoure self sche maẏ not wedde tuo  
+At oones þough ȝe fighten eủemo  
+That oon of ȝou al be him loþ or leef  
+He moot go pẏpen in an ẏuẏ leef  
+This is to seẏ sche maẏ not haue boþe  
+Al be ȝe neuer so Ialouse ne so wroþe  
+And for þi I ȝou putte in þis degre  
+That ech of ȝou schal haue his destine  
+As him is schape and herkneþ in what wise  
+Lo heer ȝour ende of þat I schal deuẏse  
+¶ Mẏ wil is þis for plat conclusion̄  
+Wiþouten enẏ replicacion̄  
+If þat ȝow likeþ takeþ it for þe beste  
+That eủẏch of ȝou schal gon wher him leste  
+ﬀrelẏ wiþouten Raunceon or daunger  
+And þis daẏ fiftẏ wẏkes fer ne neer  
+Euerich of ȝou schal bringe an hundred knightes  
+Armed for þe lẏstes vp al rightes  
+Al redẏ to da
