--- a/transcriptions/26v.md
+++ b/transcriptions/26v.md
@@ -25,4 +25,16 @@ That eủẏch of ȝou schal gon wher him leste
 And þis daẏ fiftẏ wẏkes fer ne neer  
 Euerich of ȝou schal bringe an hundred knightes  
 Armed for þe lẏstes vp al rightes  
-Al redẏ to da
+Al redẏ to darreẏne hir bẏ bataile  
+And þis biheete I ȝou wiþoute faile  
+vpon mẏ trouþe and as I am a knight  
+That wheþer of ȝou boþe þat haþ might  
+This is to sein þat wheþer he or þou  
+Maẏ with his hundred as I spak of now  
+Sle his contrarie or out of lystes drẏue  
+That schal I ȝive Emelya to wyue  
+To whom þat fortune ȝeueþ so fair a grace  
+The lystes schal I maken in þis place  
+And god so wisly on mẏ soule rewe  
+As I schal euen Iugge ben and trewe  
+ȝe schal non oþer eende wiẏ
