--- a/transcriptions/26v.md
+++ b/transcriptions/26v.md
@@ -3,7 +3,7 @@ title: "Transcription of folio 26v"
 date: June 2018
 author: Jenna Schoen
 ---
-- [ ] Transcribed
+- [X] Transcribed
 - [ ] Double checked
 
 ﬀor whom ȝe haue þis strif and Ialousie  
@@ -37,4 +37,8 @@ To whom þat fortune ȝeueþ so fair a grace
 The lystes schal I maken in þis place  
 And god so wisly on mẏ soule rewe  
 As I schal euen Iugge ben and trewe  
-ȝe schal non oþer eende wiẏ
+ȝe schal non oþer eende wiþ me maken  
+þat on of ȝou ne schal ben deed or taken  
+And if ȝou þinkeþ þis is wel ẏ saẏed  
+Seẏ ȝour avẏs and holdeþ ȝou appaied  
+This is ȝour ende and ȝour conclusion̄    
