--- a/transcriptions/27v.md
+++ b/transcriptions/27v.md
@@ -3,7 +3,7 @@ title: "Transcription of folio 27v"
 date: June 2018
 author: Jenna Schoen
 ---
-- [ ] Transcribed
+- [X] Transcribed
 - [ ] Double checked
 
 And of þe westward in memorie  
