--- a/transcriptions/28v.md
+++ b/transcriptions/28v.md
@@ -3,7 +3,7 @@ title: "Transcription of folio 28v"
 date: June 2018
 author: Jenna Schoen
 ---
-- [ ] Transcribed
+- [X] Transcribed
 - [ ] Double checked
 
 Of Stubbes scharpe and hidous to biholde  
@@ -11,7 +11,34 @@ In which þer ran a Rombel in a swougħ
 And þought a storm schulde bresten euerẏ bougħ  
 And dounward from an huỻ vnder a bente  
 Ther stood þe temple of mars armypotente  
-Wrougħt aỻ of burned steel of which þentre
+Wrougħt aỻ of burned steel of which þentre  
 Was long and streyt and gastly for to see  
 And þer out cam a rage and such a vese  
 That it made aỻ þe gates for to rese  
+The northerne light in atte dores schone  
+ﬀor wyndowe on þe waỻ ne was þer none  
+Thorugh which men mighte enẏ light discerne  
+The dores waren aỻ of Atthemant et̔ne  
+ẏchenchede ouertwart and endlong  
+Wiþ Iren towgħ and for to make it strong  
+Eủy piler þe temple to sustene  
+Was tonne gret of Iren bright and scheene  
+Ther saẏ I ferst þe derk ẏmagẏnẏnge  
+Of felonẏe and al þe compassynge  
+The cruel Ire reed as enẏ glede  
+The pykpurs and eek þe pale drede  
+The smẏler with þe knẏf vnder þe cloke  
+The schepene brennẏng with þe blake smoke  
+The tresoun of þe morthering in þe bedde  
+The open werre wiþ woundes aỻ bibledde  
+Contek wiþ bloodẏ knẏf and scharp manace  
+Al ful of schrikyng was þat sory place  
+The sleer of himself yet saugh I þere  
+his herte hath baþed al his here  
+The nayl ẏ drẏuen in þe schood on night  
+The colde deth wiþ mouþ gapende vprighte  
+Amẏddes of þe temple sat meschan̄ce  
+With disconfort and sorẏ contenan̄ce  
+ẏet saugh I woodnesse laughyng in his rage  
+Armed compleint out hees and feers outrage  
+The karoigne in þe busk wiþ þrote ẏ korue  
