--- a/transcriptions/29v.md
+++ b/transcriptions/29v.md
@@ -5,3 +5,13 @@ author: Jenna Schoen
 ---
 - [ ] Transcribed
 - [ ] Double checked
+
+In redoutẏng of mars and of his glorie  
+Now to þe temple of Diane þe chaste  
+As schortly as I can I wol me haste  
+To telle ȝou aỻ þe discripcion̄  
+Depeẏnted ben þe walles vp and don̄  
+Of huntẏng and of schamefast chastite  
+Ther saugh I how woful Calistope  
+Whan þat Diane agreued was with here  
+Was torned fro a wom̄an 
