--- a/transcriptions/30r.md
+++ b/transcriptions/30r.md
@@ -4,7 +4,7 @@ date: June 2018
 author: G. E. Saretto
 ---
 
-- [ ] Transcribed
+- [x] Transcribed
 - [ ] Double checked
 
 And seẏde helpe for þou maẏst best of aỻ  
@@ -33,3 +33,13 @@ Haþ preẏed þat he mighte ben of þat game
 A wel was him þat þer to chosen was  
 ﬀor if þer fille to morwe such a caas  
 ȝe knowe wel þat euerẏ lustẏ knight  
+That loueþ ꝑamours and haþ his migħt  
+Were it in Ingelond or elles where  
+Thei wolde here þankes wilnen to be þere  
+To fighte for a ladẏ benedicite  
+It were a lustẏ sighte for to see  
+And right so ferden þeẏ with Palamon  
+With him þer wente knightes manẏ on  
+Som wol ben armed in an habergeon  
+And in a brest plate and in a light Iepon  
+And some wol haue a paire plates large  
