--- a/transcriptions/29v.md
+++ b/transcriptions/29v.md
@@ -3,7 +3,7 @@ title: "Transcription of folio 29v"
 date: June 2018
 author: Jenna Schoen
 ---
-- [ ] Transcribed
+- [X] Transcribed
 - [ ] Double checked
 
 In redoutẏng of mars and of his glorie  
@@ -14,4 +14,29 @@ Depeẏnted ben þe walles vp and don̄
 Of huntẏng and of schamefast chastite  
 Ther saugh I how woful Calistope  
 Whan þat Diane agreued was with here  
-Was torned fro a wom̄an 
+Was torned fro a wom̄an til a bere  
+And after was sche maad þe loode sterre  
+Hire sone is eek a sterre as men may se  
+Ther saugh I dane torned til a tree  
+I mene nat þe goddesse Diane  
+But Penneus doughter which þat hight Dane  
+¶ Ther saugh I accheon an herte ẏ maked  
+ﬀor vengance þat he saugh Diane al naked  
+I saugh how þat his houndes haue him caught  
+and freten him for þat þei knewe him naught  
+ẏet ẏpeynted was a litel forþere more  
+how atthalance hounted þe wilde bore  
+And Meliagre and manẏ anoþer mo  
+ﬀor which Diane wrought him care and wo  
+Ther saugh I manẏ anoþer wonder storie  
+The which me list nat drawe to memorie  
+¶ This goddess on an hert ful wel hiegh seet  
+Wiþ smale honndes aỻ aboute hir feet  
+And vnder neþe hire feet sche hadde a moone  
+Wexẏnge it was and schulde wanẏe soone  
+In gaude greene hir statue cloþed was  
+hir eẏhen caste sche ful lowe a doun  
+Ther Pluto haþ his derke regioun  
+A wōman trauaillẏnge was hire biforn  
+But for hire childe so longe was vnborn  
+ﬀul pitoulẏ lucẏna gan sche calle  
