--- a/transcriptions/31v.md
+++ b/transcriptions/31v.md
@@ -3,5 +3,42 @@ title: "Transcription of folio 32v"
 date: June 2018
 author: Jenna Schoen
 ---
-- [ ] Transcribed
+- [X] Transcribed
 - [ ] Double checked
+
+To eesen hem and don hem aỻ honour  
+That yet men weneþ þat no mannes wit  
+Of non estat ne couþe amenden it  
+The menstralcẏe þe ẜiuse atte feste  
+The grete ȝiftes to þe meste and leste  
+The riche arraẏ of Theseus Paleẏs  
+Ne who sat ferst ne last vpon þe deẏs  
+What ladies fairest ben or best daunsynge  
+Or which of hem can best daunsen or synge  
+Ne who most felynglik spekeþ of loue  
+What haukes sitten on þe ꝑche aboue  
+What houndes liggen on þe flor adoun   
+Of aỻ þis make I now no mencion̄  
+But alle þeffecte þat þinkeþ me þe beste  
+Now comeþ þe poẏnt and herkneþ if ȝou lest  
+¶ The sondaẏ night ardaẏ bigan to springe  
+Whan Palamon þe larke herde synge  
+Al þough it nere nought daẏ bẏ houres tuo  
+Ȝet song þe larke and Palamon right þo  
+Wiþ holẏ herte and with an heigh corage  
+he ros to wenden on his pilgrimage  
+vnto þe blissful Citharea benigne  
+I mene Venus honorable and digne  
+And in here houre he walkeþ forþ a paas  
+vnto þe lystes þer hire temple was  
+And doun he kneleþ and wiþ humble chere  
+and herte sore he seyde as ȝe schal heere  
+¶ ﬀairest of faire O ladẏ myn Venus  
+Doughter to Ioue and spouse to Vulncanus  
+Though glader of þe moūt of Citheron̄  
+ﬀor þilke loue þou haddest to adon̄  
+haue pite of mẏ bittre teeres smerte  
+and tak myn humble preier at þin herte  
+Allas I ne haue no langage to telle  
+Theffectes ne þe torment of myn helle  
+Mẏn herte maẏ mȳ harmes nought bewreẏe   
