--- a/transcriptions/32v.md
+++ b/transcriptions/32v.md
@@ -3,5 +3,42 @@ title: "Transcription of folio 32v"
 date: June 2018
 author: Jenna Schoen
 ---
-- [ ] Transcribed
+- [X] Transcribed
 - [ ] Double checked
+
+And made a signe wherbẏ þat he took  
+That his praẏer accepted was þat daẏ  
+ﬀor þough þe signe schewed a delaẏ  
+Ȝit wist he weel þat gǖnted was his boone  
+And with glad herte he went him home ful soone  
+The þridde hour inequal þat Palamon  
+Bigan to venus temple for to gon  
+vp roos þe soune and vp roos Emelẏe  
+And to þe temple of Diane gan hẏe  
+hir maẏdenes þat þider with hir ladde  
+ﬀul redilẏ with hem þe fyr þeẏ hadde  
+Thencens þe cloþes and þ remenant aỻ  
+That to þe sacrifice longen schaỻ  
+The hornes fuỻ of methe as was þe gise  
+Ther lacked nat to do hir sacrifise  
+Smokyng þe temple ful of cloþes fair̉  
+This Emelye with herte debonaire  
+hire bodẏ with þe water of a welle  
+But how sche dide hire rite I dar not telle  
+But it be enẏ þing in gen̔al  
+And ȝit it were a game to here it al  
+To him that meneþ wel it nere no charge  
+But it is good a man be at his large  
+hire brighte heer wss kempt vntressed al  
+A Corone of a grene oke Serial  
+vpon hire heed set ful faire and mete  
+Tuo fyres on þe auter gan sche beete  
+And dede hire þinges as men may biholde  
+In Stace of Thebes and þise bookes olde  
+Whan kyndled was þe fẏr wiþ pitous cheere  
+vnto Diane sche spak as þe may heere  
+O chaste goddesse of þe woodes greene  
+To whom boþe heuen and erþe and see is seene  
+Queen of þe regne of Pluto dirk and lowe  
+Goddesse of maẏdenes þat myn herte hast knowe  
+ﬀul manẏ a yeer and wost what I desire  
