--- a/transcriptions/34r.md
+++ b/transcriptions/34r.md
@@ -4,7 +4,7 @@ date: July 2018
 author: G. E. Saretto
 ---
 
-- [ ] Transcribed
+- [x] Transcribed
 - [ ] Double checked
 
 Of trace honoured art and lord ẏ holde  
