changes to ms198

--- a/documents/ms198.md
+++ b/documents/ms198.md
@@ -1,1 +1,17 @@
+### Oxford Corpus Christi MS 18
 
+Oxford Corpus Christi MS 198 is a 15th century Middle English manuscript of *The Canterbury Tales*.
+
+## Scribe
+
+The manuscript was created by a scribe whose hand scholars have identified in several manuscripts: "Scribe D."
+
+## Script
+
+The manuscript is written in Anglicana Formata. Anglicana is a distinctively English script, which developed in the late 13th century from Gothic scripts, and was used until the 16th century. It was the most popular bookhand in late medieval England. This manuscript is specifically written in Anglicana Formata, the most formal version of Anglicana, in which the scribe lifts pens between minims (strokes).  
+
+## Origin
+
+The manuscript is believed to be produced between 1400 and 1410.
+
+## Provenance
