--- a/documents/ms198.md
+++ b/documents/ms198.md
@@ -12,6 +12,6 @@ The manuscript is written in Anglicana Formata. Anglicana is a distinctively Eng
 
 ## Origin
 
-The manuscript is believed to be produced between 1400 and 1410.
+The manuscript is believed to be produced in London between 1400 and 1410. 
 
 ## Provenance
