updated biblio and ms198

--- a/documents/ms198.md
+++ b/documents/ms198.md
@@ -1,17 +1,33 @@
-### Oxford Corpus Christi MS 18
+## Oxford Corpus Christi MS 18
 
-Oxford Corpus Christi MS 198 is a 15th century Middle English manuscript of *The Canterbury Tales*.
-
-## Scribe
-
-The manuscript was created by a scribe whose hand scholars have identified in several manuscripts: "Scribe D."
-
-## Script
-
-The manuscript is written in Anglicana Formata. Anglicana is a distinctively English script, which developed in the late 13th century from Gothic scripts, and was used until the 16th century. It was the most popular bookhand in late medieval England. This manuscript is specifically written in Anglicana Formata, the most formal version of Anglicana, in which the scribe lifts pens between minims (strokes).  
+Oxford Corpus Christi MS 198 (referred to in Chaucerian studies as "Cp") is a 15th century Middle English manuscript of *The Canterbury Tales*.
 
 ## Origin
 
-The manuscript is believed to be produced in London between 1400 and 1410. 
+The manuscript is dated between 1410 and 1420 (Manley and Rickert 93). It was likely produced either in London or Westminster, and was copied from an exemplar by a single scribe (Doyle and Parkes 185, 194). [look into newer sources for dialect -- CW or SW midlands? smith says SWM]
+
+## Significance  
+
+MS 198 is the best representative of the "c" tradition of _The Canterbury Tales_, which is a particular order of the tales (Doyle and Parkes 192). It is also the earliest representation of the "New English Style" of illumination (Manley and Rickert 94).
+
+## Content
+
+The manuscript contains most of _The Canterbury Tales_, except for several links between tales, and it cuts off at line 290 of the "Parson's Tale" (it is also missing "The Retraction"). It adds "Gamelyn" (which is not Chaucer's) after the "Cook's Tale."
+
+## Scribe
+
+The manuscript was created by "Scribe D," one of the most prolific scriveners of late 14th and early 15th century England. Scribe D is believed to be active from about 1390 to 1426 (Doyle and Parkes 196), and his handwriting has been found in 12 total manuscripts. He has also been identified as John Machaunt, a London-born clerk [cite]. In addition to his prolific career, Scribe D is considered to be one of the period's highest quality hands (Doyle and Parkes 196).
+
+## Script
+
+The manuscript is written in a version of anglicana formata. Anglicana is a distinctively English script that developed in the late 13th century (from Gothic scripts) and was used until the 16th century. It was the most popular bookhand in late medieval England. This manuscript is specifically written in anglicana formata, the most formal version of anglicana. Scribe D's personal form of anglicana formata is very disciplined, neat, and consistent across his manuscripts, which makes him an excellent candidate for our initial training (Doyle and Parkes 178). Though predominantly anglicana, he does use some secretary forms (the short **r** and kidney-shaped **s**).
 
 ## Provenance
+
+The manuscript probably first belonged to the Burle family, who were in Chaucer's social circle, in the 15th century. William Fulman owned the manuscript in the 17th century (perhaps via the Peyto family), and gave it to Corpus Christi, Oxford, where it remains today (Manley and Rickert 99).
+
+## Bibliography
+
+Doyle, A.I. and M.B. Parkes. "The production of copies of the _Canterbury Tales_ and the _Confessio Amantis_ in the early fifteenth century." in _Medieval Scribes, Manuscripts, and Libraries: Essays Presented to N.R. Ker_." London: Scolar Press, 1978.
+
+Manley, John and Edith Rickert. _The Text of The Canterbury Tales_. Vol. 1. Chicago: The University of Chicago Press, 1940.
